# TablePay

./: README.md
api/: BUILD.bazel
api/app/: BUILD.bazel  contexts.go  controllers.go  hrefs.go  media_types.go  user_types.go
api/app/test/: BUILD.bazel  assets_testing.go  tablepay_testing.go
api/design/: BUILD.bazel  api.go  cloverpaymentpayload.go  cloverpaymenttype.go  resources.go
api/server/: assets.go  server.go  tablepay.go
cmd/api/: BUILD.bazel  main.go
frontend/: BUILD.bazel  README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Cart.js  Encrypt.js  HomePage.js  Navbar.js  OrderViewPage.js  PaymentInfo.js
frontend/src/components/actions/: cartActions.js
frontend/src/components/actions/action-types/: cart-actions.js
frontend/src/components/network/: network.js  utils.js
frontend/src/components/reducers/: cartReducer.js
scripts/: encrypt_cc.py  pay_script.py  requirements.txt
