load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

filegroup(
    name = "settings",
    srcs = ["settings.yml"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    data = [
        ":settings",  # keep
        "//platform/tablepay/frontend",
    ],
    importpath = "github.com/tablepay/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//platform/common/platformlogger:go_default_library",
        "//platform/common/settings:go_default_library",
        "//platform/tablepay/api/server:go_default_library",
        "//protocols/pointofsale/dataapi:go_default_library",
        "//vendor/github.com/grpc-ecosystem/go-grpc-middleware/retry:go_default_library",
        "//vendor/github.com/mbobakov/grpc-consul-resolver:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_binary(
    name = "api",
    embed = [":go_default_library"],
    importpath = "github.com/tablepay/cmd/api",
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "//containers/go_base",
    embed = [":go_default_library"],
    importpath = "github.com/tablepay/cmd/api",
    visibility = ["//visibility:public"],
)
